deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-deployment
  labels:
    app: weather-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
      - name: weather-app
        image: aknaan/weather-app-with-k8s:${IMAGE_TAG} 
        ports:
        - containerPort: 80
