service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
spec:
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http-weather
        #nodePort: 30105
  type: ClusterIP
        #type: NodePort
